# pygrist-mini

./: LICENSE  README.md  pyproject.toml  setup.cfg
.basedpyright/: baseline.json
.github/workflows/: ci.yml
pygrist_mini/: __init__.py
